--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,19 @@ bin-obj/
 *.vcxproj.filters
 *.vcxproj
 *.sln
+
+###Build directory
+build/
+
+###Cmake files
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
